max-height to .main-page, .menu-container, .map-container, #map 90vh

--- a/index.html
+++ b/index.html
@@ -46,6 +46,9 @@
       </div>
       <div id="map"></div>
     </div>
+    <footer>
+      <p>Developed by Julia Foresti</p>
+    </footer>
 
     <!-- ------------------------------------------------------------------------ -->
     <script
